# hs-sq

./: README.md  cabal.project  flake.nix  justfile
sq/: CHANGELOG.md  LICENSE  README.md  cabal.nix  default.nix  sq.cabal  sqlime.cabal
sq/bench/: Main.hs
sq/lib/: Sq.hs
sq/lib/Sq/: Connection.hs  Decoders.hs  Encoders.hs  Input.hs  Internal.hs  M.hs  Migrations.hs  Mode.hs  Names.hs  Null.hs  Output.hs  Pool.hs  Statement.hs  Support.hs  Transactional.hs
sq/test/: Main.hs
sq/test/Sq/: Test.hs
sq/test/Sq/Test/: Codec.hs
sqlime/: LICENSE  default.nix  sqlime.cabal
sqlime/lib/: Sqlime.hs
sqlime/lib/Sqlime/: Decoders.hs  Encoders.hs  Internal.hs  Support.hs
