cabal-version: 2.4
name: sq
version: 0.0.1
license: Apache-2.0
license-file: LICENSE
extra-source-files: README.md CHANGELOG.md
author: Renzo Carbonara
maintainer: renλren.zone
copyright: Renzo Carbonara, 2023
category: Databases
build-type: Simple
synopsis: High-level SQLite client.
description: High-level SQLite client.
homepage: https://github.com/k0001/hs-sq
bug-reports: https://github.com/k0001/hs-sq/issues
tested-with: GHC == 9.6.1

common basic
  default-language: GHC2021
  ghc-options: -O2 -Wall
  build-depends:
    base == 4.*,
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DerivingVia
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards

library
  import: basic
  hs-source-dirs: lib
  exposed-modules:
    Sq
    Sq.Internal
  other-modules:
    Sq.Encoders
    Sq.Decoders
  build-depends:
    async,
    binary,
    bytestring,
    containers,
    contravariant,
    direct-sqlite,
    profunctors,
    resourcet,
    resourcet-extra,
    retry,
    safe-exceptions,
    stm,
    streaming,
    template-haskell,
    text,
    time,
    transformers,
